Add jquery highlight

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -66,3 +66,7 @@ body {
   border-bottom-style: solid;
   border-bottom-color: rgb(192, 192, 192);
 }
+
+.highlight-orange{
+  background-color:orange;
+}
