Scrap replication from PouchDB to CouchDB...waaay too buggy

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -10,9 +10,9 @@ body {
   padding-left:40px;
 }
 
-.btn-google_plus { background-image:url("../img/logo-google-plus.png"); }
-.btn-github { background-image:url("../img/logo-github.png"); }
-.btn-twitter { background-image:url("../img/logo-twitter.png"); }
+.btn-google_plus, .btn-google_plus:active { background-image:url("../img/logo-google-plus.png"); }
+.btn-github, .btn-github:active { background-image:url("../img/logo-github.png"); }
+.btn-twitter, .btn-twitter:active { background-image:url("../img/logo-twitter.png"); }
 
 #ocr_content {
   position:relative;
@@ -54,7 +54,7 @@ body {
   z-index:100;
   background-color:white;
   left:0px;
-  top:30px;
+  top:35px;
   display:none;
 }
 
