--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -10,7 +10,7 @@ body {
   padding-left:40px;
 }
 
-.btn-google_plus, .btn-google_plus:active { background-image:url("../img/logo-google-plus.png"); }
+.btn-google_plus, .btn-google_plus:active { background-image:url("../img/logo-google-plus.png"); background-color:#C8311E; }
 .btn-github, .btn-github:active { background-image:url("../img/logo-github.png"); }
 .btn-twitter, .btn-twitter:active { background-image:url("../img/logo-twitter.png"); }
 
