--- a/views/main.html
+++ b/views/main.html
@@ -10,8 +10,66 @@
 <script src="public/js/jquery-1.11.0.min.js"></script>
 <script src="public/js/jquery.cookie.js"></script>
 <script src="public/js/underscore-min.js"></script>
-<script src="public/js/pouchdb-2.0.0.min.js"></script>
-<script src="public/js/oauth.js"></script>
 <script src="public/js/jquery.highlight.min.js"></script>
 <script src="public/js/application.js"></script>
 <script src="public/js/jquery.tooltipster.js"></script>
+<script>
+$(function() {
+  OCRCorrection.initialize({
+    page_id : {{ id }},
+    show_replacements : false,
+    show_word_replacements : true
+  });
+});
+</script>
+</head>
+<body>
+  <div class="navbar navbar-fixed-top">
+    <div class="navbar-inner">
+      <div class="container">
+        <a class="btn btn-navbar" data-toggle="collapse" data-target="nav-collapse">
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </a>
+        <a class="brand" href=".">OCR Correction of BHL Documents (DEMO)</a>
+        <div class="nav-collapse pull-right">
+        </div>
+     </div>
+    </div>
+  </div>
+
+<div style="margin-top:40px;" class="container-fluid">
+  <div class="row-fluid">
+    <div class="span8">
+      <div id="ocr_content">
+        {{ content|raw }}
+        <div id="ocr_image_container"></div>
+        <img id="ocr_image" src="{{ image_filename }}" />
+      </div>
+    </div>
+    <div class="span4">
+      <div id="ocr_edit_history"></div>
+    </div>
+  </div>
+</div>
+
+<script type="text/template" id="ocr_history_template">
+<div class="ocr_edit_item media">
+  <a href="<%=userUrl%>" class="pull-left" target="_blank"><img src = "<%=userAvatar%>" class="media-object" width="48" alt="<%=userName%>" /></a>
+  <div class="media-body">
+    <h4 class="media-heading"><%=userName%></h4>
+    <%=text%>
+  </div>
+</div>
+</script>
+
+<script type="text/template" id="name_tooltip_template">
+  <span>Name found in edited text: <%=names%></span>
+</script>
+
+<script type="text/template" id="word_replacement_template">
+  <span title="Replace <%=key%> with <%=value%>" style="background-color:lavender"><%=word%></span>
+</script>
+</body>
+</html>
